# tablet-theremin

./: README.md  pyproject.toml
tablet_theremin/: __init__.py  __main__.py  app.py  frequencies.py
